<resources>
    <string name="app_name">Campus Guide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="splash_name">CAMPUS GUIDE</string>
    <string name="todo">TODO</string>
    <string name="exit">Exit</string>
    <string name="ground_floor">GROUND FLOOR</string>
    <string name="_1st_floor">1ST FLOOR</string>
    <string name="_2nd_floor">2ND FLOOR</string>
    <string name="_3rd_floor">3RD FLOOR</string>
    <string name="backdrop_title">SDMIT</string>
    <string name="backdrop_subtitle">Sri Dharmasthala Manjunatheshwara</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="m_001">M-001</string>
    <string name="m_003">M-003</string>
    <string name="m_004">M-004</string>
    <string name="m_007">M-007</string>
    <string name="m_008">M-008</string>
    <string name="m_011">M-011</string>
    <string name="m_012">M-012</string>
    <string name="m_013">M-013</string>
    <string name="m_015">M-015</string>
    <string name="details">DETAILS</string>
    <string name="title_activity_maps">Map</string>
    <string name="info">Click and hold the Inital point.After when you see the point click and hold the destination point !</string>
    <string name="block_a">BLOCK-A</string>
    <string name="block_b">BLOCK-B</string>
    <string name="c004">C-004</string>
    <string name="c005">C-005</string>
    <string name="c_105">C-105</string>
    <string name="c_106">C-106</string>
    <string name="c_204">C-204</string>
    <string name="c_205">C-205</string>
    <string name="c_206">C-206</string>
    <string name="_4th_floor">4TH FLOOR</string>
    <string name="m_101">M-101</string>
    <string name="m_103">M-103</string>
    <string name="m_104">M-104</string>
    <string name="m_105">M-105</string>
    <string name="m_106">M-106</string>
    <string name="m_107">M-107</string>
    <string name="m_108">M-108</string>
    <string name="m_109">M-109</string>
    <string name="m_110">M-110</string>
    <string name="m_111">M-111</string>
    <string name="m_112">M-112</string>
    <string name="m_114">M-114</string>
    <string name="m_115">M-115</string>
    <string name="m_116">M-116</string>
    <string name="m_301">M-301</string>
    <string name="m_303">M-303</string>
    <string name="m_304">M-304</string>
    <string name="m_305">M-305</string>
    <string name="m_306">M-306</string>
    <string name="m_307">M-307</string>
    <string name="m_312">M-312</string>
    <string name="m_313">M-313</string>
    <string name="m_314">M-314</string>
    <string name="m_315">M-315</string>
    <string name="m_316">M-316</string>
    <string name="m_401">M-401</string>
    <string name="m_403">M-403</string>
    <string name="m_404">M-404</string>
    <string name="m_405">M-405</string>
    <string name="m_406">M-406</string>
    <string name="m_407">M-407</string>
    <string name="m_408">M-408</string>
    <string name="m_411">M-411</string>
    <string name="m_412">M-412</string>
    <string name="m_413">M-413</string>
    <string name="m_414">M-414</string>
    <string name="m_415">M-415</string>
    <string name="m_416">M-416</string>
    <string name="m_417">M-417</string>
    <string name="selco">SELCO</string>
    <string name="c_202">C-202</string>
    <string name="m_209">M-209</string>
    <string name="m_308">M-308</string>
    <string name="civil_dept">Civil Dept</string>
    <string name="ladies_room">LADIES ROOM</string>
    <string name="m_210">M-210</string>
    <string name="s_d_m_institute_of_technology">S.D.M Institute Of Technology</string>
    <string name="m_201">M-201</string>
    <string name="m_203">M-203</string>
    <string name="m_204">M-204</string>
    <string name="m_205">M-205</string>
    <string name="m_206">M-206</string>
    <string name="m_207">M-207</string>
    <string name="m_211">M-211</string>
    <string name="m_213">M-213</string>
    <string name="m_214">M-214</string>
    <string name="m_215">M-215</string>
    <string name="traning">TRANING</string>
    <string name="m_216">M-216</string>
    <string name="main_seminar">MAIN SEMINAL</string>
    <string name="guide">Guide</string>
    <string name="dr_thyagaraju">Dr.Thyagaraju</string>
    <string name="kasim_nadim">Kasim Nadim</string>
    <string name="sarthak">Sarthak</string>
    <string name="sadiq">Sadiq</string>
    <string name="fahad">Fahad</string>
</resources>
