<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".gccf"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardCornerRadius="8dp"
                android:elevation="35dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                app:cardBackgroundColor="@color/colorPrimary"
                tools:ignore="UnusedAttribute">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn1"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:src="@mipmap/c004"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/c004"
                        android:gravity="center_horizontal"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardCornerRadius="8dp"
                android:elevation="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="6dp"
                app:cardBackgroundColor="@color/colorPrimary"
                tools:ignore="UnusedAttribute">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn2"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:src="@mipmap/c005"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/c005"
                        android:gravity="center_horizontal"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>
    <Button
        android:background="@drawable/button_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/white"
        android:text="@string/details"/>

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.github.barteksc.pdfviewer.PDFView>
</LinearLayout>
